--- a/Notebooks/00_Webscrapping/00_01_getting_images.ipynb
+++ b/Notebooks/00_Webscrapping/00_01_getting_images.ipynb
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "home = \"https://pokemondb.net\"\n",
-    "path_data = Path(\"../../Data/Images/\")"
+    "path_data = Path(\"../../Data/Images/Base\")"
    ]
   },
   {
@@ -302,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
